# EasySQL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: ESQL.h  datatype.hpp  db.hpp  example_unicode_utils.hpp
include/api/: api.hpp
src/: datatype.cpp  db.cpp  main.cpp
src/api/: api.cpp  table.cpp
